--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "framer-motion": "^12.23.24",
     "react-router-dom": "^7.9.5",
     "react-scripts": "^5.0.1",
     "swiper": "^12.0.3"
